--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="img-profile-box">
                 <img 
-                src="./IMG/1660257529137.jfif" 
+                src="./IMG/309278049_5261494463976167_5550709219461259173_n.jpg" 
                 alt="Imagem do perfil"
                 class="img-profile">
                 <h1>André Lucas</h1>
